# RTX

./: CMakeLists.txt  Engine.cc  Engine.hh  Matrix3d.cc  Matrix3d.hh  Point_Light.cc  Point_Light.hh  README.md  Scene.cc  Scene.hh  camera.cc  camera.hh  color.cc  color.hh  image.cc  image.hh  light.cc  light.hh  material.cc  object.cc  object.hh  point.cc  point.hh  ray.cc  ray.hh  sphere.cc  sphere.hh  test.ppm  texture.hh  uniform_texture.cc  uniform_texture.hh  vector.cc  vector.hh
